--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,7 +12,8 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: sportsight-postgres
+  IMAGE_NAME: postgres
+  DOCKER_HUB_ORG: sportsight
 
 jobs:
   build:
@@ -29,8 +30,8 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PAT }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PAT }}
 
       - name: Set up Docker Buildx with Build Cloud
         uses: docker/setup-buildx-action@v3
@@ -43,7 +44,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ vars.DOCKER_USER }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.DOCKER_HUB_ORG }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
